--- a/MathModelling/M4190Part2L1.ipynb
+++ b/MathModelling/M4190Part2L1.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "Author: Jahrul Alam (alamj@mun.ca)\n",
-    "This code is used for demonstraing an example of \n",
+    "This code is used for demonstrating an example of \n",
     "Fast Fourier Transform using numpy.\n",
     "\n",
     "It shows that FFT can exactly capture the frequencies of any signal.\n",
